--- a/translations/values-cs/strings.xml
+++ b/translations/values-cs/strings.xml
@@ -141,5 +141,8 @@
     
     <string name="pref_header_map_view">Nastavení mapy</string>
     <string name="pref_header_GUI">Nastavení rozhraní</string>
+    
+    <string name="help_title">Help &amp; FAQ</string>
+    
 </resources>
 
