--- a/translations/values-de/strings.xml
+++ b/translations/values-de/strings.xml
@@ -141,4 +141,7 @@
 
     <string name="pref_header_map_view">Map-Einstellungen</string>
     <string name="pref_header_GUI">Oberfläche</string>
+    
+    <string name="help_title">Help &amp; FAQ</string>
+    
 </resources>
