--- a/translations/values-pt/strings.xml
+++ b/translations/values-pt/strings.xml
@@ -142,4 +142,7 @@
     <string name="pref_header_map_view">Configuração do mapa</string>
     <string name="pref_header_GUI">GUI</string>
     
+    <string name="help_title">Help &amp; FAQ</string>
+    
+    
 </resources>
