--- a/translations/values-hu/strings.xml
+++ b/translations/values-hu/strings.xml
@@ -142,6 +142,6 @@
     <string name="pref_header_map_view">Térkép beállítások</string>
     <string name="pref_header_GUI">Felület</string>
     
-    <string name="help_title">Help &amp; FAQ</string>
+    <string name="help_title">Segítség &amp; GYIK</string>
     
 </resources>
