--- a/translations/values-de/help.xml
+++ b/translations/values-de/help.xml
@@ -1,56 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
-    <string name="help_map_ctrl">Map control</string>
+    <string name="help_map_ctrl">Map-Steuerung</string>
     <string name="text_help_map_ctrl">
-        <b>1</b> Free mode\n
-        <b>2</b> Follow plane\n
-        <b>3</b> Rotation lock\n
-        <b>4</b> Click to reset\n
+        <b>1</b> Freier Modus\n
+        <b>2</b> Flugzeug folgen\n
+        <b>3</b> Drehung sperren\n
+        <b>4</b> Klicken, zum Zurücksetzen\n
     </string>
     
-    <string name="help_prediction">Prediction</string>
+    <string name="help_prediction">Prognostizierung</string>
     <string name="text_help_prediction">
-        Prediction of plane position (based on current speed and direction) in 10,30 and 90 seconds
+        Prognostiziert die Position des Flugzeuges (basierend auf derzeitiger Richtung und Geschwindigkeit) in 10, 30 und 90 Sekunden
     </string>
     
-    <string name="faq">FAQ (Frequently asked questions)</string>
+    <string name="faq">FAQ (Häufig gestellte Fragen)</string>
     
-    <string name="faq_connection">Connection</string>
+    <string name="faq_connection">Verbindung</string>
     <string name="text_faq_con">
-        <b>How do I connect?</b>\n
-         \u00A0\u00A0 The app needs an IP address of your computer running War Thunder, how to get your IP see http://ip.junkcode.net \n\n
+        <b>Wie stelle ich eine Verbindung her?</b>\n
+         \u00A0\u00A0 Die App benötigt die IP-Adresse Deines Computers auf dem War Thunder läuft. Diese kannst Du hier herausfinden: http://ip.junkcode.net \n\n
          
-        <b>I did enter IP and it still says \"No connection\"</b>\n
-         \u00A0\u00A0 There might be problem with your local network routing see http://ip.junkcode.net/help \n\n
+        <b>Ich habe eine IP eingegeben aber es wird weiterhin \"Keine Verbindung\" angezeigt</b>\n
+         \u00A0\u00A0 Dies könnte an einem Problem mit Deinen lokalen Routing-Einstellungen liegen. Siehe http://ip.junkcode.net/help \n\n
          
-        <b>It still doesn\'t connect!</b>\n
-         \u00A0\u00A0 You didn\'t read http://ip.junkcode.net/help, did you?
+        <b>Immer noch keine Verbindung!</b>\n
+         \u00A0\u00A0 Du hast Dir das nicht durchgelesen http://ip.junkcode.net/help, stimmt\'s'?
          \n
     </string>
     
     <string name="faq_extras">Extras</string>
     <string name="text_faq_extra">   
-        <b>I donated, where is my code?</b>\n
-         \u00A0\u00A0 You should receive code to your email within few minutes after donation, if not contact support@junkcode.net \n\n
+        <b>Ich habe gespendet, wo ist mein Code?</b>\n
+         \u00A0\u00A0 Der Code sollte per E-Mail einige Minuten nach der Spende ankommen. Falls nicht, kontaktiere bitte support@junkcode.net \n\n
          
-        <b>I entered code but nothing is unlocked</b>\n
-         \u00A0\u00A0 Try restarting the app \n\n
+        <b>Ich habe den Code eingegeben aber nichts wurde freigeschaltet</b>\n
+         \u00A0\u00A0 Starte die App neu \n\n
         
     </string>
-    <string name="faq_improvement">App improvement</string>
+    <string name="faq_improvement">App-Verbesserungen</string>
     <string name="text_faq_improve">"  
-        <b>I don\'t like something</b>\n
-         \u00A0\u00A0 Let us know what - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+        <b>Mir gefällt dieses/jenes nicht</b>\n
+         \u00A0\u00A0 Dann lass uns das wissen - http://junkcode.net/forum/viewforum.php?f=14 \n\n
          
-        <b>I found a bug</b>\n
-         \u00A0\u00A0 Post it here http://github.com/JunkCode/wtTactMap/issues?state=open \n\n
+        <b>Ich habe einen Bug gefunden</b>\n
+         \u00A0\u00A0 Bitte hier posten http://github.com/JunkCode/wtTactMap/issues?state=open \n\n
          
-        <b>I have idea for new feature</b>\n
-         \u00A0\u00A0 Let us know what - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+        <b>Ich habe eine Idee für neue Funktionen</b>\n
+         \u00A0\u00A0 Auch das kannst Du uns mitteilen - http://junkcode.net/forum/viewforum.php?f=14 \n\n
          
-        <b>I want to help with translation/icons/...</b>\n
-         \u00A0\u00A0 Some of the resources are already here http://github.com/JunkCode/wtTactMap You can propose modification or add new things. If you have any question or other ideas let us know - http://junkcode.net/forum/viewforum.php?f=14 \n\n
+        <b>Ich würde gerne helfen (Übersetzung/Icons/...)</b>\n
+         \u00A0\u00A0 Einige Ressourcen sind bereits hier: http://github.com/JunkCode/wtTactMap Du kannst hier Änderungen vorschlagen oder neues hinzufügen. Wenn Du weitere Fragen oder Ideen hast, kannst Du uns gerne schreiben - http://junkcode.net/forum/viewforum.php?f=14 \n\n
          
     </string>
     
