--- a/translations/values-de/strings.xml
+++ b/translations/values-de/strings.xml
@@ -64,7 +64,7 @@
     <string name="cancel">Abbrechen</string>
     <string name="help">Hilfe</string>
     <string name="pref_header_notifications">Benachrichtigungen</string>
-    <string name="pref_title_ringtone">Benachrihtigungston</string>
+    <string name="pref_title_ringtone">Benachrichtigungston</string>
     <string name="pref_header_data_sync">PC-Verbindung</string>
     <string name="pref_ringtone_silent">Lautlos</string>
 
@@ -142,6 +142,6 @@
     <string name="pref_header_map_view">Map-Einstellungen</string>
     <string name="pref_header_GUI">Oberfläche</string>
     
-    <string name="help_title">Help &amp; FAQ</string>
+    <string name="help_title">Hilfe &amp; FAQ</string>
     
 </resources>
